'0'-key shortcut in 3DView (switch to/from camera view) broken - sticky keys? #44251

Closed
opened 2015-04-03 17:23:12 +02:00 by Bastien Montagne · 19 comments

System Information
NA

Blender Version
Broken: latest master
Worked: (optional)

Short description of error
Animation of switching to camera view (pad0 shortcut) is now broken, a single press only partially moves the view, you have to keep it pressed (or hit it several times) to go into camera view.

Smells like timer issue? Or bad shortcut?

Exact steps for others to reproduce the error
Just hit pad0 in 3DView of default startup file…

**System Information** NA **Blender Version** Broken: latest master Worked: (optional) **Short description of error** Animation of switching to camera view (pad0 shortcut) is now broken, a single press only partially moves the view, you have to keep it pressed (or hit it several times) to go into camera view. Smells like timer issue? Or bad shortcut? **Exact steps for others to reproduce the error** Just hit pad0 in 3DView of default startup file…
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Julian Eisel was assigned by Bastien Montagne 2015-04-03 17:23:12 +02:00
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29
Member

Can't recreate. Timer should not be affected by stickies, but you never know with our event system. Also I didn't touch this shortcut...

Can't recreate. Timer *should* not be affected by stickies, but you never know with our event system. Also I didn't touch this shortcut...
Author
Owner

Checked with --factory-startup, issue is still there… Do you have 'smooth view' enabled in your userpref? Can you check with factory settings?

Checked with --factory-startup, issue is still there… Do you have 'smooth view' enabled in your userpref? Can you check with factory settings?
Author
Owner

Note the same happens when switching between side/front/top views too, actually, just a bit less visible for some reason (Pad1, Pad3, etc.).

Note the same happens when switching between side/front/top views too, actually, just a bit less visible for some reason (Pad1, Pad3, etc.).
Member

Okay checked again with my Laptop and I can recreate there. And indeed it seems to be a stickies bug since turning down the Click Timeout (UserPref->Input) to 0 resolves the issue. Will have a look tomorrow.

Okay checked again with my Laptop and I can recreate there. And indeed it seems to be a stickies bug since turning down the Click Timeout (UserPref->Input) to 0 resolves the issue. Will have a look tomorrow.

This issue was referenced by 1604a26fe6

This issue was referenced by 1604a26fe648ba712cf2cbead2a96dbd0dab817c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 1604a26fe6.

Closed by commit 1604a26fe6.

Added subscriber: @capnm

Added subscriber: @capnm

I believe this is still not working properly. A long press
on numpad - [x], - [x], - [x] ... is causing weird effects.
It creates in total two clicks (a second one on release).

I believe this is still not working properly. A long press on numpad - [x], - [x], - [x] ... is causing weird effects. It creates in total **two clicks** (a second one on release).
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Eeek, can confirm again and will have another look.

Eeek, can confirm again and will have another look.
Member

Hrmpf, seems that this behaved a bit glitchy even before stickies were committed. Think we should just trigger the view change on key release to avoid any conflicts.

Hrmpf, seems that this behaved a bit glitchy even before stickies were committed. Think we should just trigger the view change on key release to avoid any conflicts.

FWIIW, it seems to be also broken (in a different way) for emulated numpad keys (user preferences -> input).

FWIIW, it seems to be also broken (in a different way) for emulated numpad keys (user preferences -> input).

The default long-press effect was (2.74):
0 - sort of fly effect
4,6,8,2 - continuous rotation +-h/v
+,- cont. zoom in/out

The default long-press effect was (2.74): 0 - sort of fly effect 4,6,8,2 - continuous rotation +-h/v +,- cont. zoom in/out

This issue was referenced by 92755da471

This issue was referenced by 92755da4712a68ed62857a1c00eb8b43916d07b6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 92755da471.

Closed by commit 92755da471.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44251
No description provided.